--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <body>
     <div class="container">
         <div class="card">
-            <h2>반 배정</h2>
+            <h2>표선초 반배정</h2>
             <label>학년</label>
             <select id="grade">
                 <option value="1">1학년</option>
