--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
     <script>
         async function fetchStudents() {
-            const response = await fetch("https://your-server.com/students");
+            const response = await fetch("https://ban-pobz-4fbahbsp5-sanghwas-projects-c998270d.vercel.app/");
             const data = await response.json();
             displayStudents(data);
         }
@@ -112,7 +112,7 @@
             const name = document.getElementById("name").value.trim();
             if (name.length === 0 || name.length > 4) return;
             
-            const response = await fetch("https://your-server.com/students", {
+            const response = await fetch("https://ban-pobz-4fbahbsp5-sanghwas-projects-c998270d.vercel.app/", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ grade, classNum, name })
@@ -123,7 +123,7 @@
 
         async function removeStudent(grade, classNum, name) {
             if (confirm(`${name}을(를) 삭제하시겠습니까?`)) {
-                const response = await fetch("https://your-server.com/students", {
+                const response = await fetch("https://ban-pobz-4fbahbsp5-sanghwas-projects-c998270d.vercel.app/", {
                     method: "DELETE",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ grade, classNum, name })
